--- a/src/js/index.css
+++ b/src/js/index.css
@@ -1,105 +1,80 @@
-$button-color: #e74c3c;
-$date-color: #f7cac9;
-
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300);
 .navbar {
-    left: 20%;
-    width: 60%;
-    height: 5%;
-    border: 0px;
-    opacity: .7;
-}
+  left: 20%;
+  width: 60%;
+  height: 5%;
+  border: 0px;
+  opacity: .7; }
 
 .top-radius {
   border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
+  border-bottom-left-radius: 10px; }
 
 .title {
   text-align: center;
   font-size: 120px;
   font-weight: 400;
-  color: $date-color;
-}
+  color: #f7cac9; }
+
 .bottom-radius {
   border-radius: 0px;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   margin-bottom: -10px;
   left: 0%;
-  width: 100%;
-
-  h1 {
+  width: 100%; }
+  .bottom-radius h1 {
     font-weight: 200;
     font-size: 14px;
     color: white;
-    margin-left: 10px;
-  }
-}
+    margin-left: 10px; }
 
-.navbar-header {
-  img {
-    width: 10%;
-  }
-}
+.navbar-header img {
+  width: 10%; }
 
 .navbar-right {
   margin-top: -4%;
-  margin-right: 2%;
-}
+  margin-right: 2%; }
 
 .navbar-nav {
-    padding-left: -30%;
-}
+  padding-left: -30%; }
 
 button {
   margin: 0;
-  border: 0;
-}
+  border: 0; }
 
 body {
   font-family: 'proxima-nova-soft', sans-serif;
-  background-color: #f1f1f1;
-}
+  background-color: #f1f1f1; }
 
 .margin {
-  margin-top: 5%;
-}
+  margin-top: 5%; }
 
 .logo {
   margin: 5% 0% 10% 0%;
   width: 100%;
   height: 180px;
-  z-index: 100;
-}
+  z-index: 100; }
 
-
-
-
-
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300);
 *, *:after, *:before {
-  box-sizing: border-box;
-}
-
+  box-sizing: border-box; }
 
 .navbar {
-  background: $date-color;
+  background: #f7cac9;
   display: inline-block;
   padding: 0 15px;
   position: relative;
   text-align: center;
-  height: 50px;
-  li {
+  height: 50px; }
+  .navbar li {
     display: table-cell;
     padding: 10px;
     min-width: 75px;
-    text-align: center;
-    &.active a {
+    text-align: center; }
+    .navbar li.active a {
       color: #fff;
-      text-shadow: 1px 1px 1px #14171A;
-    }
-    &.marker {
+      text-shadow: 1px 1px 1px #14171A; }
+    .navbar li.marker {
       display: inline-block;
       position: absolute;
       height: 2px;
@@ -108,54 +83,35 @@ body {
       -webkit-transition: ease-in 0.3s;
       transition: ease-in 0.3s;
       top: calc(100% - 2px);
-      left: 15px;
-    }
-
-    &.anim {
+      left: 15px; }
+    .navbar li.anim {
       -webkit-animation: 0.4s shake ease-in;
-      animation: 0.4s shake ease-in;
-    }
-    a {
+      animation: 0.4s shake ease-in; }
+    .navbar li a {
       font-weight: 400;
       display: block;
       color: #555;
       text-decoration: none;
       font-size: 15px;
       -webkit-transition: ease-in 0.3s;
-      transition: ease-in 0.3s;
-    }
-  }
-  .bpt {
-    width: 200px;
-    img {
+      transition: ease-in 0.3s; }
+  .navbar .bpt {
+    width: 200px; }
+    .navbar .bpt img {
       display: inline;
       width: 30%;
-      height: 10%;
-    }
-  }
-}
-
+      height: 10%; }
 
 @keyframes shake {
   0% {
     -webkit-transform: translateX(5px);
-    transform: translateX(5px);
-  }
+    transform: translateX(5px); }
   50% {
     -webkit-transform: translateX(-5px);
-    transform: translateX(-5px);
-  }
+    transform: translateX(-5px); }
   100% {
     -webkit-transform: translateX(0px);
-    transform: translateX(0px);
-  }
-}
-
-
-
-
-
-
+    transform: translateX(0px); } }
 .post-module {
   position: relative;
   z-index: 1;
@@ -170,36 +126,35 @@ body {
   -moz-transition: all 0.3s linear 0s;
   -ms-transition: all 0.3s linear 0s;
   -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
-}
+  transition: all 0.3s linear 0s; }
 
 .post-module:hover,
 .hover {
   -webkit-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
-}
+  box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3); }
+
 .post-module:hover .thumbnail img,
 .hover .thumbnail img {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   transform: scale(1.1);
-  opacity: .6;
-}
+  opacity: .6; }
+
 .thumbnail {
-  padding: 0px;
-}
+  padding: 0px; }
+
 .post-module .thumbnail {
   background: #000000;
   height: 400px;
-  overflow: hidden;
-}
+  overflow: hidden; }
+
 .post-module .thumbnail .date {
   position: absolute;
   top: 20px;
   right: 20px;
   z-index: 1;
-  background: $date-color;
+  background: #f7cac9;
   width: 55px;
   height: 55px;
   padding: 12.5px 0;
@@ -211,15 +166,15 @@ body {
   text-align: center;
   -webkti-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+
 .post-module .thumbnail .date .day {
-  font-size: 18px;
-}
+  font-size: 18px; }
+
 .post-module .thumbnail .date .month {
   font-size: 12px;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
+
 .post-module .thumbnail img {
   display: block;
   width: 120%;
@@ -227,8 +182,8 @@ body {
   -moz-transition: all 0.3s linear 0s;
   -ms-transition: all 0.3s linear 0s;
   -o-transition: all 0.3s linear 0s;
-  transition: all 0.3s linear 0s;
-}
+  transition: all 0.3s linear 0s; }
+
 .post-module .post-content {
   position: absolute;
   bottom: 0;
@@ -242,103 +197,53 @@ body {
   -moz-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
   -ms-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
   -o-transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-  transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s;
-}
+  transition: all 0.3s cubic-bezier(0.37, 0.75, 0.61, 1.05) 0s; }
+
 .description {
   width: 100%;
   opacity: 1;
-  z-index: 10000;
-}
+  z-index: 10000; }
+
 .post-module .post-content .category {
   position: absolute;
   top: -34px;
   left: 0;
-  background: $date-color;
+  background: #f7cac9;
   padding: 10px 15px;
   color: #FFFFFF;
   font-size: 14px;
   font-weight: 600;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
+
 .post-module .post-content .title {
   margin: 0;
   padding: 0 0 10px;
   color: #333333;
   font-size: 26px;
-  font-weight: 700;
-}
+  font-weight: 700; }
+
 .post-module .post-content .sub_title {
   margin: 0;
   padding: 0 0 20px;
   color: #e74c3c;
   font-size: 20px;
-  font-weight: 400;
-}
+  font-weight: 400; }
+
 .post-module .post-content .description {
   display: none;
   color: #666666;
   font-size: 14px;
-  line-height: 1.8em;
-}
+  line-height: 1.8em; }
+
 .post-module .post-content .post-meta {
   margin: 30px 0 0;
-  color: #999999;
-}
+  color: #999999; }
+
 .post-module .post-content .post-meta .timestamp {
-  margin: 0 16px 0 0;
-}
+  margin: 0 16px 0 0; }
+
 .post-module .post-content .post-meta a {
   color: #999999;
-  text-decoration: none;
-}
+  text-decoration: none; }
 
-//
-// .container {
-//   max-width: 800px;
-//   min-width: 640px;
-//   margin: 0 auto;
-// }
-// .container:before,
-// .container:after {
-//   content: '';
-//   display: block;
-//   clear: both;
-// }
-// .container .column {
-//   width: 50%;
-//   padding: 0 25px;
-//   -webkti-box-sizing: border-box;
-//   -moz-box-sizing: border-box;
-//   box-sizing: border-box;
-//   float: left;
-// }
-// .container .column .demo-title {
-//   margin: 0 0 15px;
-//   color: #666666;
-//   font-size: 18px;
-//   font-weight: bold;
-//   text-transform: uppercase;
-// }
-// .container .info {
-//   width: 300px;
-//   margin: 50px auto;
-//   text-align: center;
-// }
-// .container .info h1 {
-//   margin: 0 0 15px;
-//   padding: 0;
-//   font-size: 24px;
-//   font-weight: bold;
-//   color: #333333;
-// }
-// .container .info span {
-//   color: #666666;
-//   font-size: 12px;
-// }
-// .container .info span a {
-//   color: #000000;
-//   text-decoration: none;
-// }
-// .container .info span .fa {
-//   color: #e74c3c;
-// }
+/*# sourceMappingURL=index.css.map */
